GMM_Main/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <inlineHelpText>Select federally negotiated for rates issues by fed. agencies. Select state negotiated for rates issued by state. If you&apos;re eligible &amp; have notified a federal or state agency of your intent to use 10% of MTDC rate, select 10% of MTDC.</inlineHelpText>
        <label>Rate Type</label>
        <picklist>
            <controllingField>Do_you_have_anIndirect_Cost_Rate__c</controllingField>
            <picklistValues>
                <fullName>FederallyNegotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Cost Allocation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%Modified Total Direct Cost (MTDC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Count__c</fullName>
        <label>Red Flag Count</label>
        <summaryFilterItems>
            <field>Red_Flag__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Red_Flag__c.Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <formula>IMAGE( IF(Red_Flag_Count__c  &gt; 0, &quot;img/samples/flag_red.gif&quot;,&quot;img/samples/flag_green.gif&quot; ),&quot;&quot;, 20, 20 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Active_until__c</fullName>
        <label>Registration Active until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <defaultValue>&quot;https://www.sam.gov/portal/SAM/#1#1&quot;</defaultValue>
        <label>SAM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Service_Center_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Center Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <description>Created as part of new requirements from Khalid on 4/11/2016.</description>
        <label>Short Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Since_Year__c</fullName>
        <inlineHelpText>Year of organization account was created</inlineHelpText>
        <label>Since Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Size_of_the_Organization__c</fullName>
        <label>Size of the Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Program_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Program Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Program_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Program Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>If your rate has been issued by a state agency, select the stateissuing agency as it is written on the indirect cost rate document.</inlineHelpText>
        <label>State</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States_State_Office__c</fullName>
        <description>Created as part of new requirements from Khalid on 4/11/2016.</description>
        <label>States</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supertype__c</fullName>
        <label>Supertype</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treatment_of_FringeBenefits__c</fullName>
        <label>Treatment of FringeBenefits</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_of_Paid_Absences__c</fullName>
        <label>Treatment of Paid Absences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISTA_TIN__c</fullName>
        <label>VISTA TIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_via__c</fullName>
        <label>Verified Via</label>
        <picklist>
            <controllingField>Did_not_meet_500_000_threshold__c</controllingField>
            <picklistValues>
                <fullName>SF 990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (explain in comments)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_url__c</fullName>
        <label>Website (url)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>As per #2695</description>
        <label>Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organization_Type__c</columns>
        <columns>EIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organization_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>avasili</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Sysadmin</value>
        </filters>
        <label>My Organizations</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>State_office</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.State_Office</value>
        </filters>
        <label>State office</label>
    </listViews>
    <recordTypes>
        <fullName>NCCC_Campus</fullName>
        <active>true</active>
        <description>As per #4602</description>
        <label>NCCC Campus</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Commission</fullName>
        <active>true</active>
        <label>State Commission</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Office</fullName>
        <active>true</active>
        <description>As per #2695</description>
        <label>State Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>organization</fullName>
        <active>true</active>
        <label>organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A133_Audit_reviewed_for_FY_ending_date</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
 (AND
 ( A133_Audit_reviewed_for_FY_ending__c  = False,
 (!ISBLANK(TEXT( A133_Audit_reviewed_for_FY_ending_date__c ))))) 
,(AND
 ( A133_Audit_reviewed_for_FY_ending__c  = True,
(ISBLANK(TEXT( A133_Audit_reviewed_for_FY_ending_date__c ))))))</errorConditionFormula>
        <errorDisplayField>A133_Audit_reviewed_for_FY_ending_date__c</errorDisplayField>
        <errorMessage>If only when A133 Audit reviewed for FY ending is checked, then you have to enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>A133_not_required_because</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IF(Created_from_Portal__c==true,FALSE, 
OR(IF(AND(A133_not_required_because__c != FALSE, 
(AND(For_Profit_Organization__c != FALSE, Did_not_meet_500_000_threshold__c != FALSE))),TRUE,FALSE),A133_not_required_because__c != TRUE)),OR(A133_not_required_because__c !=FALSE,For_Profit_Organization__c != FALSE, Did_not_meet_500_000_threshold__c != FALSE))</errorConditionFormula>
        <errorMessage>When &quot;A133 not required because&quot; is checked, one of the following should be checked
1. For Profit Organization. 
2. Did_not_meet_500_000_threshold__c.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corrective_Action_Completed1</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

  A133_Audit_reviewed_for_FY_ending__c  ,
 ISBLANK(TEXT(   Corrective_Action_Completed1__c   ))
 )</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Completed1__c</errorDisplayField>
        <errorMessage>You can only select picklist options when A133 Audit reviewed for FY ending is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corrective_action_completed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

 IG_Audit_Issued_on__c ,
 ISBLANK(TEXT(  Corrective_Action_Completed__c  ))
 )</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Completed__c</errorDisplayField>
        <errorMessage>You can only select picklist options when IG Audit Issued on is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DUNS_Number</fullName>
        <active>true</active>
        <description>DUNS number should be 9 digit only.</description>
        <errorConditionFormula>AND(  NOT( $Profile.Name = &apos;Applicant&apos;), NOT(ISBLANK( DUNS__c )) ,NOT(REGEX(  DUNS__c , &quot;(\\d){9}&quot;)))</errorConditionFormula>
        <errorDisplayField>DUNS__c</errorDisplayField>
        <errorMessage>Please enter a 9 digit DUNS number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Do_you_have_anIndirect_Cost_Rate__c , &apos;Yes&apos;), 
OR( 
(ISBLANK( Effective_From__c )), 
(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Do_you_have_anIndirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be required as Indirect cost rate is &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Do_you_have_anIndirect_Cost_Rate__c , &apos;No&apos;),
 OR(
   NOT(ISBLANK( Effective_From__c )),
   NOT(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Effective_From__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be blank as you dont have Indirect cost rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_cant_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Status__c , &apos;Other&apos;) , 
ISBLANK( Descriptions__c ) )</errorConditionFormula>
        <errorDisplayField>Descriptions__c</errorDisplayField>
        <errorMessage>If you have selected &quot;Other&quot; in the Rate status, Please provide the description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIN_Number</fullName>
        <active>false</active>
        <description>EIN # should be 9 digit number.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( EIN__c)),NOT(REGEX(  EIN__c , &quot;(\\d){9}&quot;)))</errorConditionFormula>
        <errorDisplayField>EIN__c</errorDisplayField>
        <errorMessage>EIN # should be a 9 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_To_grater_than_Effective_From</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_From__c &gt; Effective_To__c</errorConditionFormula>
        <errorDisplayField>Effective_To__c</errorDisplayField>
        <errorMessage>It must be greater than the value entered for the “Effective From&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAPIIS_Reviewed_on</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(FAPIIS_Reviewed_on__c),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;Yes&apos;)), 
AND(NOT(ISBLANK(FAPIIS_Reviewed_on__c)),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;No&apos;)),
AND(NOT(ISBLANK(FAPIIS_Reviewed_on__c)),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;N/A&apos;))

)</errorConditionFormula>
        <errorDisplayField>FAPIIS_Reviewed_on__c</errorDisplayField>
        <errorMessage>You can enter a date only when you select FAPIIS_Reviewed as &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAPIIS_Reviewed_on_for_NO</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(FAPIIS_Reviewed__c, &apos;No&apos;),
NOT( ISBLANK( FAPIIS_Reviewed_on__c )  ) )</errorConditionFormula>
        <errorDisplayField>FAPIIS_Reviewed_on__c</errorDisplayField>
        <errorMessage>You cannot enter date when you select FAPIIS Reviewed as &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FindingsIssues</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

 IG_Audit_Issued_on__c ,
ISBLANK(TEXT( Findings_Issues__c ))
 )</errorConditionFormula>
        <errorDisplayField>Findings_Issues__c</errorDisplayField>
        <errorMessage>You can only select picklist options when IG Audit Issued on is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FindingsIssues1</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

  A133_Audit_reviewed_for_FY_ending__c  ,
 ISBLANK(TEXT(  Findings_Issues1__c  ))
 )</errorConditionFormula>
        <errorDisplayField>Findings_Issues1__c</errorDisplayField>
        <errorMessage>You can only select picklist options when A133 Audit reviewed for FY ending is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IG_Audit_issued_on_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 (AND
 (IG_Audit_Issued_on__c = False,
 (!ISBLANK(TEXT(IG_Audit_Issued_on_date__c))))) 
,(AND
 (IG_Audit_Issued_on__c = True,
(ISBLANK(TEXT(IG_Audit_Issued_on_date__c))))))</errorConditionFormula>
        <errorDisplayField>IG_Audit_Issued_on_date__c</errorDisplayField>
        <errorMessage>If only when  IG Audit Issued on is checked, then you have to enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issuing_agency</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Issuing_Agency__c , &apos;Other&apos;) ,
 ISBLANK( Description__c ) )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please provide description when &quot;issuing agency &quot; is selected as &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_cost_information</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Do_you_have_anIndirect_Cost_Rate__c , &apos;No&apos;) ,
 OR(
 NOT(ISBLANK( Description__c ) ),
 NOT(ISBLANK( Descriptions__c ) ),
 NOT(ISBLANK(  Rate_Base__c  ) ),
NOT(ISBLANK(  Treatment_of_FringeBenefits__c ) ),
NOT(ISBLANK(  Treatment_of_Paid_Absences__c ) )))</errorConditionFormula>
        <errorDisplayField>Do_you_have_anIndirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>You cannot enter information for Indirect cost rate type as &quot;NO&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Check_Box</fullName>
        <active>true</active>
        <errorConditionFormula>AND(If((For_Profit_Organization__c = True),(A133_not_required_because__c = False),FALSE),If((For_Profit_Organization__c = False),(A133_not_required_because__c = True),FALSE))</errorConditionFormula>
        <errorMessage>Only one check box selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organization_Legal_name_on_list</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISBLANK(Excluded_party_list_reviewed_on__c)),NOT(ISBLANK(TEXT(Organization_Legal_Name_on_list__c))))</errorConditionFormula>
        <errorDisplayField>Organization_Legal_Name_on_list__c</errorDisplayField>
        <errorMessage>You can select &quot;Organization Legal Name list on&quot; only when you enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organization_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES( Organization_Type__c, &quot;For Profit Organization&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Higher Education Organization - Private&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Higher Education Organization - State&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;HQ Internal Organizations&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Indian Tribe&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - County&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - Municipal&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - Township&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;National and State Parks&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;National non-profit&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Native American&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Non-Profit&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Other&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Commission&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Education Agency&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Government&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;U.S. Territory&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Unknown Designation&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Federal Government&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Office&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Service Center&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;NCCC Campus&quot;),1,0) &gt; 3</errorConditionFormula>
        <errorDisplayField>Organization_Type__c</errorDisplayField>
        <errorMessage>You can select only three values from the list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_10_Digit</fullName>
        <active>true</active>
        <description>Phone number should be 10 digit</description>
        <errorConditionFormula>IF(
ISBLANK(Phone) , false , NOT( REGEX( Phone,&quot;(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter a 10 digit phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Cannot_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Draft__c , &apos;False&apos;),ISBLANK(Phone))</errorConditionFormula>
        <errorMessage>please fill the phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Base</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_percent</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR
( ISPICKVAL(Rate_Type__c, &apos;FederallyNegotiated&apos;),
ISPICKVAL(Rate_Type__c, &apos;State Negotiated&apos;),  
ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)
),


AND( ISBLANK(R_Percent__c) )

)</errorConditionFormula>
        <errorDisplayField>R_Percent__c</errorDisplayField>
        <errorMessage>Please enter the percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rbase</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Rate_Base__c) ))</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TFB</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Treatment_of_FringeBenefits__c) ))</errorConditionFormula>
        <errorDisplayField>Treatment_of_FringeBenefits__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TPA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Treatment_of_Paid_Absences__c) ))</errorConditionFormula>
        <errorDisplayField>Treatment_of_Paid_Absences__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
</CustomObject>